# EGTTools

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CGT-Exercise.ipynb  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Example.ipynb  LICENSE  MANIFEST.in  README.md  api.html  bld.bat  environment.yml  examples.html  genindex.html  index.html  install_dependencies.sh  installation.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html  vcpkg.json
.github/: dependabot.yml
_autosummary/: egttools.analytical.PairwiseComparison.html  egttools.analytical.StochDynamics.html  egttools.analytical.html  egttools.analytical.replicator_equation.html  egttools.analytical.replicator_equation_n_player.html  egttools.analytical.sed_analytical.StochDynamics.html  egttools.analytical.sed_analytical.calculate_nb_states.html  egttools.analytical.sed_analytical.calculate_state.html  egttools.analytical.sed_analytical.csr_matrix.html  egttools.analytical.sed_analytical.eig.html  egttools.analytical.sed_analytical.html  egttools.analytical.sed_analytical.lil_matrix.html  egttools.analytical.sed_analytical.permutations.html  egttools.analytical.sed_analytical.replicator_equation.html  egttools.analytical.sed_analytical.replicator_equation_n_player.html  egttools.analytical.sed_analytical.sample_simplex.html  egttools.analytical.sed_analytical.warn.html  egttools.analytical.utils.StochDynamics.html  egttools.analytical.utils.calculate_gradients.html  egttools.analytical.utils.check_if_point_in_unit_simplex.html  egttools.analytical.utils.check_if_there_is_random_drift.html  egttools.analytical.utils.check_replicator_stability_pairwise_games.html  (+271 more)
cpp/src/: CMakeLists.txt  egttools.cpp  egttools.h  egttools_pybind11_distributed.cpp  python_stubs.hpp  version.h
cpp/src/egttools/: CMakeLists.txt  Distributions.cpp  SeedGenerator.cpp
cpp/src/egttools/finite_populations/: CMakeLists.txt  MLS.cpp  Utils.cpp
cpp/src/egttools/finite_populations/analytical/: PairwiseComparison.cpp
cpp/src/egttools/finite_populations/behaviors/: NFGStrategies.cpp
cpp/src/egttools/finite_populations/evolvers/: GeneralPopulationEvolver.cpp  NetworkEvolver.cpp
cpp/src/egttools/finite_populations/games/: AbstractNPlayerGame.cpp  CRDGame.cpp  CRDGameTU.cpp  Matrix2PlayerGameHolder.cpp  Matrix2PlayerNetworkGameHolder.cpp  MatrixNPlayerGameHolder.cpp  NPlayerStagHunt.cpp  NormalFormGame.cpp  NormalFormNetworkGame.cpp  OneShotCRD.cpp  OneShotCRDNetworkGame.cpp
cpp/src/egttools/finite_populations/structure/: GarciaGroup.cpp  Group.cpp
cpp/src/egttools/infinite_populations/: CMakeLists.txt  ReplicatorDynamics.cpp
cpp/src/egttools/utils/: CMakeLists.txt  CalculateExpectedIndicators.cpp
cpp/src/pybind11_files/: behaviors.cpp  behaviors.hpp  boost_cpp_int_cast_to_pybind11.hpp  datastructures.cpp  datastructures.hpp  distributions.cpp  distributions.hpp  egttools_common.hpp  games.cpp  games.hpp  methods.cpp  methods.hpp  random.cpp  random.hpp  structure.cpp  structure.hpp
src/: CMakeLists.txt  egttools.cpp  egttools.h  python_stubs.hpp  version.h
src/egttools/: CMakeLists.txt  Data.cpp  Distributions.cpp  SeedGenerator.cpp  __init__.py  _min_dependencies.py  utils.py
src/egttools/analytical/: __init__.py  complex_games.py  sed_analytical.py  utils.py
src/egttools/behaviors/: __init__.py  opinion_behaviors.py
src/egttools/behaviors/CPR/: abstract_cpr_strategy.py  cpr_strategies.py
src/egttools/behaviors/CRD/: __init__.py  goal_based.py  moving_average.py  time_based.py
src/egttools/behaviors/NormalForm/: __init__.py
src/egttools/behaviors/NormalForm/TwoActions/: __init__.py  nfg_strategies.py
src/egttools/datastructures/: __init__.py
src/egttools/distributions/: __init__.py
src/egttools/finite_populations/: CMakeLists.txt  Utils.cpp
src/egttools/finite_populations/behaviors/: CRDStrategies.cpp  CrdBehaviors.cpp  NFGStrategies.cpp
src/egttools/finite_populations/games/: CRDGame.cpp  CRDGameTU.cpp  CrdGame.cpp  CrdGameTU.cpp  NormalFormGame.cpp
src/egttools/games/: __init__.py  abstract_games.py  crd.py  informal_risk.py  nonlinear_games.py  opinion_game.py  pgg.py
src/egttools/helpers/: __init__.py  vectorized.py
src/egttools/numerical/: __init__.py  games.pyi
src/egttools/numerical/structure/: __init__.py  factories.py
src/egttools/plotting/: __init__.py  helpers.py  indicators.py  simplex2d.py  simplified.py
src/egttools/utils/: CMakeLists.txt  CalculateExpectedIndicators.cpp
tests/: CMakeLists.txt  check_run.py  conftest.py  glibc_memory_violation.py  requirements.txt  test_PairwiseMoran.cpp  test_PairwiseMoran_stationary_distribution.cpp  test_PairwiseMoran_stationary_distribution_dense.cpp  test_PairwiseMoran_stationary_distribution_sparse.cpp  test_analytical.py  test_analytical_utils.py  test_binomial_coefficient.cpp  test_complex_games.py  test_cpr_game.py  test_crd_game.cpp  test_eigen_sparse_matrix.cpp  test_game_holders.py  test_mc_simulations.py  test_multinomial_pmf.py  test_multivariate_hypergeometric_pdf.py  test_numerical.py  test_oneshotcrd_game.cpp  test_openmp.py  test_ordered_sampling_without_replacement.cpp  test_pairwise_comparison_numerical.py  test_plotting.py  test_stoch_dynamics.py  test_timing_uncertainty.cpp  test_utility_functions.py  test_utils.py  test_virtual_functions.py
tests/cpp/: test_PairwiseMoran_run.cpp  test_PairwiseMoran_stationary_distribution_dense.cpp  test_PairwiseMoran_stationary_distribution_sparse.cpp  test_binomial_coefficient.cpp  test_binomial_coefficient_with_time.cpp  test_blas_lapack.cpp  test_calculate_fixation_probabilities.cpp  test_calculate_stationary_distribution_sparse.cpp  test_crd_game.cpp  test_crd_tu_game.cpp  test_game_holders.cpp  test_general_evolver_network.cpp  test_network_evolver.cpp  test_network_sync.cpp  test_one_shot_network_game.cpp  test_thread_safe_lru_cache.cpp  test_timing_uncertainty.cpp
(+548 files in other folders)
