[build-system]
requires = [
    "setuptools>=44",
    "wheel",
    "scikit-build>=0.13.1",
    "cmake>=3.27",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.check-manifest]
ignore = [
    "PKG-INFO",
    "*.egg-info",
    "*.egg-info/*",
    "setup.cfg",
    ".hgtags",
    ".hgsigs",
    ".hgignore",
    ".gitignore",
    ".bzrignore",
    ".gitattributes",
    ".github/*",
    ".travis.yml",
    "enkinsfile",
    "*.mo",
]