[metadata]
name = egttools
version = <see setup.py>
description = Efficient Python library for EGT
long_description = file: README.md
long_description_content_type = text/markdown
description_file = README.md
url = https://github.com/Socrats/EGTTools
author = Elias F. Domingos
author_email = elias.fernandez.domingos@vub.be
project_urls =
    Bug Tracker = https://github.com/Socrats/EGTTools/issues
    Documentation = https://egttools.readthedocs.io/en/latest/
    Source Code = https://github.com/Socrats/EGTTools
keywords = evolutionary game theory, social dynamics, evolutionary dynamics
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
install_requires =
    numpy>=1.7.0
    scipy>=1.5.0
    matplotlib>=3.3.0
    networkx
zip_safe = False

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
addopts =
    --ignore build_tools
    --ignore docs
    --ignore pybind11
    --disable-pytest-warnings
    -rxXs

[check-manifest]
ignore = .appveyor.yml
         .readthedocs.yml
         .travis.yml
         binder
         binder/*